listGame works